# network-sim-2020-2

./: .gitignore  README.md
doc/examples/: examplenetwork.json  examplerun.txt  input.txt  testout.txt
doc/latex/: appendices.tex  body.tex  classdiagrams.drawio  latest.txt  main.tex  noleak-commit-1e911efa9b.txt  titlepage.tex
doc/valgrind/: latest.txt
evaluation/: pasi.md
src/: address.cpp  address.hpp
src/NetworkSimulator/: NetworkSimulator.pro  mainwindow.cpp  mainwindow.cpp.autosave  mainwindow.h  mainwindow.ui
src/build-nwsim-gui-Qt_5_15_0_WebAssembly-Debug/: nwsim-gui.cbp
src/build-nwsim-gui-Qt_5_15_0_WebAssembly-Debug/nwsim-gui_autogen/: moc_predefs.h
src/build-nwsim-gui-Qt_5_15_0_WebAssembly-Debug/nwsim-gui_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
src/build-nwsim-gui-Qt_5_15_0_WebAssembly-Debug/nwsim-gui_autogen/include/: ui_mainwindow.h
src/nwsim/: CMakeLists.txt  address.cpp  address.hpp  application.hpp  dummy.hpp  eventqueue.cpp  eventqueue.hpp  link.cpp  link.hpp  main.cpp  network.cpp  network.hpp  networkinterface.cpp  networkinterface.hpp  node.cpp  node.hpp  packet.cpp  packet.hpp  simulatable.hpp
src/nwsim-gui/: CMakeLists.txt  mainwindow.ui
src/nwsim/tests/: testroutines.hpp
